--- a/.github/workflows/runnn.yml
+++ b/.github/workflows/runnn.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Echo
         run: echo "BUILD"
       - name: Ref
-        run: echo github.ref
+        run: echo ${{ github.ref }}
 
   upload:
     needs: build
