--- a/.github/workflows/runnn.yml
+++ b/.github/workflows/runnn.yml
@@ -22,8 +22,8 @@ jobs:
   upload:
     needs: build
     if: |
-      github.ref == 'refs/heads/master'
-        || github.ref == 'refs/heads/release*'
+      ${{github.ref == 'refs/heads/master'}}
+        || ${{github.ref == 'refs/heads/release*'}}
     runs-on: ubuntu-latest
 
     steps:
